charts/deviceedge/cps/model_gen/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: model-gen
  labels:
    app: model-gen
spec:
  type: NodePort
  ports:
    - name: 8001-tcp
      protocol: TCP
      port: 8001
      targetPort: 8001
      nodePort: 31001
  selector:
    app: model-gen
