charts/deviceedge/cps/model_gen/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: model-gen
  labels:
    app: model-gen
spec:
  to:
    kind: Service
    name: model-gen
    weight: 100
  port:
    targetPort: 8001-tcp
  wildcardPolicy: None
